# basketball-coach-ai

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: main.py
app/agents/: __init__.py  analytics_agent.py  base.py  game_state_agent.py  recommendation_agent.py  strategy_agent.py
app/api/: deps.py  root.py
app/api/v1/: router.py
app/api/v1/endpoints/: game.py  health.py
app/core/: config.py  database.py  logging.py  redis.py
app/models/: __init__.py  game.py
app/repositories/: __init__.py  game_repository.py
app/schemas/: __init__.py  game.py  recommendations.py
app/services/: __init__.py  game_service.py  openai_service.py  timeout_orchestrator.py
app/websockets/: __init__.py  connection_manager.py  game_socket.py
app/workers/: game_worker.py
tests/: conftest.py  test_game.py
