[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basketball-coach-ai"
version = "0.1.0"
description = "Agentic AI Basketball Coaching Backend"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Validation & settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Database
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    # Cache / broker
    "redis>=5.2.0",
    # AI
    "openai>=1.55.0",
    # HTTP client
    "httpx>=0.28.0",
    # Env
    "python-dotenv>=1.0.0",
    # Logging
    "structlog>=24.4.0",
    # Task queue
    "celery[redis]>=5.4.0",
    # Utilities
    "python-ulid>=3.0.0",
    "aiosqlite>=0.22.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "factory-boy>=3.3.0",
]

[project.scripts]
serve = "app.main:run"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "C4"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*", "alembic/*"]
